# codeplace-editor

./: CMakeLists.txt  CONTRIBUTING_GUIDE.md  FEATURES.md  MODULE_REFERENCE.md  README.md  install.sh  resources.qrc
releases/arm64/: codeplace-editor-0.1-Linux.deb
releases/x86_64/: codeplace-editor-0.1-Linux.deb
resources/: INSTALL.md  codeplace.desktop  install.sh
src/: main.cpp
src/ai/: ai_chat_sidebar.cpp  ai_chat_sidebar.h  ai_message_widget.cpp  ai_message_widget.h
src/browser/: file_browser_sidebar.cpp  file_browser_sidebar.h
src/core/: ai_client.cpp  ai_client.h  default_shortcuts.h  process_helper.cpp  process_helper.h  project_manager.cpp  project_manager.h  session_manager.cpp  session_manager.h  settings_manager.cpp  settings_manager.h  simple_highlighter.cpp  simple_highlighter.h  theme_manager.cpp  theme_manager.h
src/editor/: editor_view.cpp  editor_view.h  find_replace_bar.cpp  find_replace_bar.h  quick_start_widget.cpp  quick_start_widget.h  symbol_info_widget.cpp  symbol_info_widget.h  tab_container.cpp  tab_container.h
src/gitscm/: create_branch_dialog.cpp  create_branch_dialog.h  diff_utils.cpp  diff_utils.h  diff_view.cpp  diff_view.h  git_manager.cpp  git_manager.h  gitscm_widget.cpp  gitscm_widget.h
src/lspclient/: lsp_client.cpp  lsp_client.h  lsp_manager.cpp  lsp_manager.h  lsp_process.cpp  lsp_process.h  lspclient_widget.cpp  lspclient_widget.h  problems_widget.cpp  problems_widget.h
src/main/: main_window.cpp  main_window.h  preferences_dialog.cpp  preferences_dialog.h
src/outline/: outline_widget.cpp  outline_widget.h  symbol_parser.cpp  symbol_parser.h
src/search/: search_engine.cpp  search_engine.h  search_widget.cpp  search_widget.h
src/terminal/: pty_process.cpp  pty_process.h  terminal_widget.cpp  terminal_widget.h
